--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-  <head></head>
-  <body>
-    test124
-  </body>
+  <frameset rows="100, *">
+    <frame src="oben.html">
+    <frame src="https://outlook.live.com/mail/0/">
+  </frameset>
 </html>
