--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   z-index: 9998;
 }
 
-/* Icon column */
+/* Icon column (centered horizontally inside the 50px column) */
 #iconbar {
   position: fixed;
-  top: 10px;
-  left: 10px;
-  width: 40px;
+  top: 50%;
+  left: 25px;                 /* center of the 50px column */
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,7 +37,7 @@
 
 /* Main content area */
 #content {
-  margin-left: 60px;
+  margin-left: 60px;          /* 50px + 1px line + spacing */
   height: 100vh;
   background: white;
   display: flex;
@@ -122,7 +122,7 @@ function doSearch() {
 
     <!-- Account -->
     <a href="https://account.microsoft.com/" target="_blank" title="Account">
-      <img src="img/ProfileImage.png" class="icon" alt="Account">
+      <img src="img/ProfileImage.jpg" class="icon" alt="Account">
     </a>
 
   </div>
