--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   z-index: 9998;
 }
 
-/* Icon column (centered horizontally inside the 50px column) */
+/* Icon column (top aligned, horizontally centered in 50px column) */
 #iconbar {
   position: fixed;
-  top: 50%;
-  left: 25px;                 /* center of the 50px column */
-  transform: translate(-50%, -50%);
+  top: 10px;                 /* start at the top */
+  left: 25px;                /* center of the 50px column */
+  transform: translateX(-50%); /* horizontal centering only */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center;       /* center icons horizontally */
   gap: 12px;
   z-index: 9999;
 }
